# ttH

./: README.md
analyzers/: Analyzer_run_recipe.sh  README.md
analyzers/Extras/PhysicsTools_JetMCAlgos_plugins/: GenTtbarCategorizer.cc
analyzers/Extras/PhysicsTools_JetMCAlgos_python/: GenTtbarCategorizer_cfi.py
analyzers/scripts/setup/: ttH_bb_pkgs.sh
analyzers/ttH_bb/: BuildFile.xml  CU_ttH_cfg_file_Data.yml  CU_ttH_cfg_file_MC.yml  crabConfig_Data.py  crabConfig_MC.py
analyzers/ttH_bb/interface/: CU_ttH_EDA_Ntuple.h  CU_ttH_EDA_event_vars.h  ntuple_helpers.h
analyzers/ttH_bb/macros/Common_Classifier_BDT/: CommonClassifier_BDT.C  input_BDT.txt
analyzers/ttH_bb/macros/Data_MC_Control_Plots/: Data_MC_Control_Plot_Comparison.C  Data_MC_Control_Plots.C  Gen_weight.C  histogram_list.txt  input.txt
analyzers/ttH_bb/macros/Data_crab_jobs/: crabConfig_Data_JetHT_B.py  crabConfig_Data_JetHT_C.py  crabConfig_Data_JetHT_D.py  crabConfig_Data_JetHT_E.py  crabConfig_Data_JetHT_F.py  crabConfig_Data_MET_B.py  crabConfig_Data_MET_C.py  (+14 more)
analyzers/ttH_bb/plugins/: BuildFile.xml  CU_ttH_EDA.cc  CU_ttH_EDA.h  CU_ttH_EDA_Handles.cc  CU_ttH_EDA_Handles.h  CU_ttH_EDA_Misc.cc  CU_ttH_EDA_Setups.cc
analyzers/ttH_bb/python/: CU_ttH_read_yaml_Data.py  CU_ttH_read_yaml_MC.py  __init__.py  ttHbb_Data_cfi.py  ttHbb_MC_cfi.py
analyzers/ttH_bb/src/: RoccoR.cc  classes.h  classes_def.xml  ntuple_helpers.cc
analyzers/ttH_bb/test/: CU_ttH_data_EDA_cfg.py  CU_ttH_mc_EDA_cfg.py
githooks/: init.sh  pre-commit
script/setup/: init.sh  ttHSW.sh
util/ntuple_st2/: CMakeLists.txt  README.md
util/ntuple_st2/include/ttH/analyzers/: ttH_bb
util/ntuple_st2/include/ttH/ntuple_st2/: data_structs.h  debug.h  definitions.h  producer.h  stage2.h  trees.h  trees_rw.h
util/ntuple_st2/scripts/: dict_CU_ttH_EDA_Ntuple.sh
util/ntuple_st2/src/: debug.cc  main.cc  producer.cc  stage2.cc
util/ntuple_st2/src/dict/: .gitignore
util/ntuple_st2/src/trees/: io.cc  read.cc  write.cc
(+114 files in other folders)
